--- a/架构师训练营/06性能优化/09_常用算法.md
+++ b/架构师训练营/06性能优化/09_常用算法.md
@@ -28,8 +28,7 @@
 
 ### 动态规划算法解决背包问题
 
-通过找到合适的角度，将所求解的目标值在某（几）个维度上展开，将一个大问题拆解
-为若干小问题，从小问题的最优解，寻找大问题的最优解
+通过找到合适的角度，将所求解的目标值在某（几）个维度上展开，将一个大问题拆解为若干小问题，从小问题的最优解，寻找大问题的最优解
 
 ### 遗传算法解决背包问题
 
