--- a/架构师训练营/04系统架构/案例分析.md
+++ b/架构师训练营/04系统架构/案例分析.md
@@ -2,3 +2,25 @@
 
 ## 4.4 案例：维基百科技术架构
 
+## 4.5 案例：淘宝业务发展及技术架构
+
+## 4.6 案例：宅米网技术变迁
+
+CDN服务
+redis集群
+数据库主从复制
+大数据平台
+
+微服务
+数据分片，数据冷热分离
+
+构建自驱动的闭环
+- 不要分配任务，去完成目标而不是完成工作
+- 加班既不是目的也不是手段
+- 亡羊补牢，没事不要瞎折腾
+
+只有优秀的员工才能创建出优秀的企业
+- 为员工的成长买单
+- 先关注人，后关注事
+- 快乐工作
+
