--- a/架构师训练营/08安全架构/07_高可用故障案例分析.md
+++ b/架构师训练营/08安全架构/07_高可用故障案例分析.md
@@ -38,6 +38,6 @@
 ### NPE
 
 经验教训:
-- 程序在处理一个输入的对象时，如果不能明确该对象是否为空，必须做空指针判断。
+- 程序在处理一个输入的对git 象时，如果不能明确该对象是否为空，必须做空指针判断。
 - 程序在调用其他方法时，输入的对象尽量保证不是null，必要时构造空对象（使用空
 对象模式）。
