最后的答疑

--- a/架构师训练营/11技术管理/02_解决问题.md
+++ b/架构师训练营/11技术管理/02_解决问题.md
@@ -60,3 +60,5 @@
 
 多问自己：我到底想要什么；少问自己：我究竟有什么问题。
 
+知鱼君注：多问自己我到底想要什么，少问自己我究竟有什么问题，问自己究竟有什么问题多了就抑郁症了，往前看想要什么，为什么得不到，应该如何去做，计划是什么，一二三四步骤是什么，付诸行动，一点点向目标前进，向未来前进，过往都不重要，现在也不重要，往前走往前看才重要。
+
